syntax = "proto3";

package envoy.extensions.network.socket_interface.v3;

import "google/protobuf/wrappers.proto";

import "udpa/annotations/status.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.network.socket_interface.v3";
option java_outer_classname = "DefaultSocketInterfaceProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/network/socket_interface/v3;socket_interfacev3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Default socket interface configuration]

// Configuration for default socket interface that relies on OS dependent syscall to create
// sockets.
message DefaultSocketInterface {
  // Enable io_uring for socket operations if the kernel supports. io_uring is only valid in
  // Linux with at least kernel version 5.6. Otherwise, Envoy will fall back to use the default
  // socket operations. The default is false.
  bool enable_io_uring = 1;

  // The size for io_uring submission queues (SQ). io_uring is built with a fixed size in each
  // thread during configuration, and each io_uring operation creates a submission queue
  // entry (SQE). The default is 1000.
  google.protobuf.UInt32Value io_uring_size = 2;

  // Enable io_uring submission queue polling (SQPOLL). io_uring SQPOLL mode polls all SQEs in the
  // SQ in the kernel thread. io_uring SQPOLL mode may reduce latency and increase CPU usage as a
  // cost. The default is false.
  bool enable_io_uring_submission_queue_polling = 3;

  // The size of an io_uring socket's read buffer. Each io_uring read operation will allocate a
  // buffer of the given size. If the given buffer is too small, the socket will have read multiple
  // times for all the data. The default is 8192.
  google.protobuf.UInt32Value io_uring_read_buffer_size = 4;

  // The write timeout of an io_uring socket on closing in ms. io_uring writes and closes
  // asynchronously. If the remote stops reading, the io_uring write operation may never complete.
  // The operation is canceled and the socket is closed after the timeout. The default is 1000.
  google.protobuf.UInt32Value io_uring_write_timeout_ms = 5;
}
